--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="container">
         <img src="images/profile.jpg" alt="Jayakrishnan CP" class="profile-img">
-        <h1>Jay Krishnan CP</h1>
+        <h1>Jayakrishnan C Prakash</h1>
         <p class="title">Technology Enthusiast | Cloud & Security Specialist</p>
         <p class="about">
             Passionate about technology, cloud computing, and cybersecurity.  
