--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #121212;
+            color: #fff;
         }
         .container {
             width: 80%;
             margin: auto;
             overflow: hidden;
-            background: white;
+            background: #1e1e1e;
             padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
         }
         header {
-            background: #333;
+            background: #00bcd4;
             color: white;
-            padding-top: 20px;
-            min-height: 70px;
-            border-bottom: 3px solid #00bcd4;
             text-align: center;
+            padding: 20px 0;
         }
         header h1 {
             margin: 0;
-            font-size: 24px;
+            font-size: 28px;
         }
         .content {
             padding: 20px;
@@ -51,6 +51,14 @@
             border-bottom: 2px solid #00bcd4;
             padding-bottom: 5px;
         }
+        .profile-pic {
+            display: block;
+            margin: 20px auto;
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 3px solid #00bcd4;
+        }
     </style>
 </head>
 <body>
@@ -59,6 +67,7 @@
         <p>Transformational Cybersecurity Leader | Expert in Zero Trust, MDR, and AI-Driven Security Solutions</p>
     </header>
     <div class="container">
+        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
         <div class="content">
             <div class="section">
                 <h2>Summary</h2>
@@ -87,8 +96,8 @@
             </div>
             <div class="section">
                 <h2>Contact</h2>
-                <p>Email: <a href="mailto:jaykrishnancp@gmail.com">jaykrishnancp@gmail.com</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/jaykrishnancp" target="_blank">Jayakrishnan Prakash</a></p>
+                <p>Email: <a href="mailto:jaykrishnancp@gmail.com" style="color:#00bcd4;">jaykrishnancp@gmail.com</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/jaykrishnancp" target="_blank" style="color:#00bcd4;">Jayakrishnan Prakash</a></p>
             </div>
         </div>
     </div>
