--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p>Transformational Cybersecurity Leader | Expert in Zero Trust, MDR, and AI-Driven Security Solutions</p>
     </header>
     <div class="container">
-        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+        <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic">
         <div class="content">
             <div class="section">
                 <h2>Summary</h2>
