--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <p>April 2023 - Present | San Francisco Bay Area</p>
                 <p>Leading cybersecurity transformation projects, implementing Zero Trust architectures, and leveraging AI-driven threat detection.</p>
                 <h3>METMOX - Manager, Security Operations</h3>
-                <p>May 2013 - April 2023 | San Francisco Bay Area</p>
+                <p>May 2013 - Present | San Francisco Bay Area</p>
                 <p>Developed and managed security architecture strategies, evaluated security tools, and led threat response teams.</p>
                 <h3>Verizon Business - Team Lead, Incident Management</h3>
                 <p>April 2012 - May 2013 | Mumbai, India</p>
