--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jay Krishnan CP | Cybersecurity Leader Resume</title>
+  <title>Jayakrishnan CP | Cybersecurity Leader Resume</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/alpinejs" defer></script>
   <style>
@@ -185,8 +185,8 @@
 
     <!-- Hero Section -->
     <div class="hero">
-      <img src="your-photo-url.jpg" alt="Jay Krishnan CP" class="mx-auto" />
-      <h1 class="text-4xl font-bold mt-4">Jay Krishnan CP</h1>
+      <img src="your-photo-url.jpg" alt="Jayakrishnan CP" class="mx-auto" />
+      <h1 class="text-4xl font-bold mt-4">Jayakrishnan CP</h1>
       <p class="text-lg mt-2">Senior Cybersecurity Leader | AI-Driven Threat Detection | Zero Trust Architect</p>
     </div>
 
