--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-      <img src="https://github.com/jkrishnancp/website_com/blob/main/images/profile.jpg" alt="Jayakrishnan CP" class="mx-auto" />
+      <img src="images/profile.jpg" alt="Jayakrishnan CP" class="mx-auto" />
       <h1 class="text-4xl font-bold mt-4">Jayakrishnan CP</h1>
       <p class="text-lg mt-2">Senior Cybersecurity Leader | AI-Driven Threat Detection | Zero Trust Architect</p>
     </div>
