--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jay Krishnan CP | Cybersecurity Leader Resume</title>
+  <title>Jayakrishnan CP | Cybersecurity Leader Resume</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/alpinejs" defer></script>
   <style>
@@ -126,8 +126,8 @@
     <!-- Hero Section -->
     <div class="hero">
       <!-- Placeholder for photo (replace with your URL or Base64) -->
-      <img src="https://via.placeholder.com/150" alt="Jay Krishnan CP" class="mx-auto" />
-      <h1 class="text-4xl font-bold mt-4">Jay Krishnan CP</h1>
+      <img src="images/profile.jpg" alt="Jayakrishnan CP" class="mx-auto" />
+      <h1 class="text-4xl font-bold mt-4">Jayakrishnan CP</h1>
       <p class="text-lg mt-2">Senior Cybersecurity Leader | AI-Driven Threat Detection | Zero Trust Architect</p>
     </div>
 
@@ -146,32 +146,32 @@
         <h2 class="section-header">Experience</h2>
         <div class="carousel">
           <div class="card" @click="isOpen = true; selectedItem = 'seniorDirector'">
-            <img src="images/placeholder1.jpg" alt="Senior Director" />
+            <img src="images/uvcyber_logo.jpeg" alt="Senior Director" />
             <div class="card-number">1</div>
             <div class="card-title">Senior Director - Security Operations</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'manager'">
-            <img src="images/placeholder2.jpg" alt="Manager" />
+            <img src="images/metmox_logo.jpeg" alt="Manager" />
             <div class="card-number">2</div>
             <div class="card-title">Manager, Security Operations</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'teamLead'">
-            <img src="images/placeholder3.jpg" alt="Team Lead" />
+            <img src="images/verizonbusiness_logo.jpeg" alt="Team Lead" />
             <div class="card-number">3</div>
             <div class="card-title">Team Lead - Incident Management</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'seniorAnalyst'">
-            <img src="images/placeholder4.jpg" alt="Senior Analyst" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpeg" alt="Senior Analyst" />
             <div class="card-number">4</div>
             <div class="card-title">Senior Security Analyst</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'assistantManager'">
-            <img src="images/placeholder5.jpg" alt="Assistant Manager" />
+            <img src="images/1631375676244.jpeg" alt="Assistant Manager" />
             <div class="card-number">5</div>
             <div class="card-title">Assistant Manager - Information Security</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'systemAdmin'">
-            <img src="images/placeholder6.jpg" alt="System Admin" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpg" alt="System Admin" />
             <div class="card-number">6</div>
             <div class="card-title">System Administrator</div>
           </div>
@@ -262,17 +262,17 @@
         <h2 class="section-header">Education</h2>
         <div class="carousel">
           <div class="card" @click="isOpen = true; selectedItem = 'mba'">
-            <img src="images/placeholder1.jpg" alt="MBA" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpeg" alt="MBA" />
             <div class="card-number">1</div>
             <div class="card-title">Master of Business Administration (MBA)</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'gdba'">
-            <img src="images/placeholder2.jpg" alt="GDBA" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpeg" alt="GDBA" />
             <div class="card-number">2</div>
             <div class="card-title">Graduate Diploma in Business Administration (GDBA)</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'diploma'">
-            <img src="images/placeholder3.jpg" alt="Diploma" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpeg" alt="Diploma" />
             <div class="card-number">3</div>
             <div class="card-title">Diploma in Computer Hardware</div>
           </div>
