--- a/index.html
+++ b/index.html
@@ -262,17 +262,17 @@
         <h2 class="section-header">Education</h2>
         <div class="carousel">
           <div class="card" @click="isOpen = true; selectedItem = 'mba'">
-            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpeg" alt="MBA" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpg" alt="MBA" />
             <div class="card-number">1</div>
             <div class="card-title">Master of Business Administration (MBA)</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'gdba'">
-            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpeg" alt="GDBA" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpg" alt="GDBA" />
             <div class="card-number">2</div>
             <div class="card-title">Graduate Diploma in Business Administration (GDBA)</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'diploma'">
-            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpeg" alt="Diploma" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpg" alt="Diploma" />
             <div class="card-number">3</div>
             <div class="card-title">Diploma in Computer Hardware</div>
           </div>
