--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="card-title">Assistant Manager - Information Security</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'systemAdmin'">
-            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpg" alt="System Admin" />
+            <img src="images/safe_software_and_integrated_solutions_pvt_ltd_logo.jpeg" alt="System Admin" />
             <div class="card-number">6</div>
             <div class="card-title">System Administrator</div>
           </div>
@@ -262,12 +262,12 @@
         <h2 class="section-header">Education</h2>
         <div class="carousel">
           <div class="card" @click="isOpen = true; selectedItem = 'mba'">
-            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpg" alt="MBA" />
+            <img src="images/download.jpeg" alt="MBA" />
             <div class="card-number">1</div>
             <div class="card-title">Master of Business Administration (MBA)</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'gdba'">
-            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpg" alt="GDBA" />
+            <img src="images/download.jpeg" alt="GDBA" />
             <div class="card-number">2</div>
             <div class="card-title">Graduate Diploma in Business Administration (GDBA)</div>
           </div>
