--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="card-title">Team Lead - Incident Management</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'seniorAnalyst'">
-            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpeg" alt="Senior Analyst" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpg" alt="Senior Analyst" />
             <div class="card-number">4</div>
             <div class="card-title">Senior Security Analyst</div>
           </div>
