--- a/index.html
+++ b/index.html
@@ -17,15 +17,27 @@
       overflow-x: hidden;
     }
     .hero {
-      background: linear-gradient(to bottom, #141414, #000);
+      background: url('images/bay-bridge-san-francisco-california-wallpaper-preview.jpg') no-repeat center center/cover;
       padding: 40px 20px;
       position: relative;
-      min-height: 200px;
+      min-height: 300px;
+    }
+    .hero::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9));
+      z-index: 1;
     }
     .hero .hero-content {
       text-align: left;
       max-width: 600px;
       padding-left: 20px;
+      position: relative;
+      z-index: 2;
     }
     .hero .name {
       font-size: 2.5rem;
@@ -60,7 +72,7 @@
     }
     .content {
       padding: 20px;
-      min-height: calc(100vh - 260px);
+      min-height: calc(100vh - 360px);
     }
     .section-header {
       font-size: 1.5rem;
