--- a/index.html
+++ b/index.html
@@ -17,62 +17,21 @@
       overflow-x: hidden;
     }
     .hero {
-      background: url('images/bay-bridge-san-francisco-california-wallpaper-preview.jpg') no-repeat center center/cover;
+      background: linear-gradient(to bottom, #141414, #000);
       padding: 40px 20px;
+      text-align: center;
       position: relative;
-      min-height: 300px;
     }
-    .hero::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.9));
-      z-index: 1;
-    }
-    .hero .hero-content {
-      text-align: left;
-      max-width: 600px;
-      padding-left: 20px;
-      position: relative;
-      z-index: 2;
-    }
-    .hero .name {
-      font-size: 2.5rem;
-      font-weight: bold;
-      margin-bottom: 10px;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-    }
-    .hero .title {
-      font-size: 1.5rem;
-      color: #E50914;
-      margin-bottom: 15px;
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
-    }
-    .hero .contact {
-      font-size: 1rem;
-      color: #ccc;
-      margin-bottom: 10px;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
-    }
-    .hero .contact a {
-      color: #E50914;
-      text-decoration: none;
-    }
-    .hero .contact a:hover {
-      text-decoration: underline;
-    }
-    .hero .header-line {
-      font-size: 1.2rem;
-      color: #fff;
-      margin-bottom: 5px;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+    .hero img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 4px solid #E50914;
     }
     .content {
       padding: 20px;
-      min-height: calc(100vh - 360px);
+      min-height: calc(100vh - 60px);
     }
     .section-header {
       font-size: 1.5rem;
@@ -166,32 +125,17 @@
   <div x-data="{ isOpen: false, selectedItem: '', selectedLang: 'en' }">
     <!-- Hero Section -->
     <div class="hero">
-      <div class="hero-content">
-        <div class="name">Jayakrishnan CP</div>
-        <div class="title">Senior Cybersecurity Leader | AI-Driven Threat Detection | Zero Trust Architect</div>
-        <div class="contact">
-          Email: <a href="mailto:jaykrishnancp@gmail.com">jaykrishnancp@gmail.com</a> | 
-          LinkedIn: <a href="https://linkedin.com/in/jaykrishnancp">linkedin.com/in/jaykrishnancp</a>
-        </div>
-        <div class="header-line">Over 18 Years of Cybersecurity Expertise</div>
-        <div class="header-line">Transforming Security with Innovation</div>
-      </div>
+      <!-- Placeholder for photo (replace with your URL or Base64) -->
+      <img src="images/profile.jpg" alt="Jayakrishnan CP" class="mx-auto" />
+      <h1 class="text-4xl font-bold mt-4">Jayakrishnan CP</h1>
+      <p class="text-lg mt-2">Senior Cybersecurity Leader | AI-Driven Threat Detection | Zero Trust Architect</p>
     </div>
 
     <!-- Content Area -->
     <div class="content">
-      <!-- Navigation Headers -->
-      <div class="space-y-4 mb-6">
-        <h2 class="section-header" id="summary">Summary</h2>
-        <h2 class="section-header" id="experience">Experience</h2>
-        <h2 class="section-header" id="skills">Skills</h2>
-        <h2 class="section-header" id="projects">Projects</h2>
-        <h2 class="section-header" id="education">Education</h2>
-        <h2 class="section-header" id="contact">Contact</h2>
-      </div>
-
       <!-- Summary Section -->
       <div id="summary" class="space-y-4">
+        <h2 class="section-header">Summary</h2>
         <div class="card">
           <p>Accomplished cybersecurity leader with over 18 years of experience driving enterprise-grade security solutions. Spearheaded Zero Trust architectures (ZIA, ZPA) and AI-powered threat detection systems, achieving 100% SLA compliance and reducing incident response times by 40%. Passionate about aligning security strategies with business objectives, Jay has built and led high-performing MDR and SOC teams, implementing SIEM, XDR, and SOAR platforms to enhance operational resilience. His expertise in automation and cloud-native security has delivered scalable programs, saving organizations millions through optimized threat detection and response.</p>
         </div>
@@ -199,6 +143,7 @@
 
       <!-- Experience Section -->
       <div id="experience" class="space-y-4">
+        <h2 class="section-header">Experience</h2>
         <div class="carousel">
           <div class="card" @click="isOpen = true; selectedItem = 'seniorDirector'">
             <img src="images/uvcyber_logo.jpeg" alt="Senior Director" />
@@ -216,7 +161,7 @@
             <div class="card-title">Team Lead - Incident Management</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'seniorAnalyst'">
-            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpg" alt="Senior Analyst" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpeg" alt="Senior Analyst" />
             <div class="card-number">4</div>
             <div class="card-title">Senior Security Analyst</div>
           </div>
@@ -226,7 +171,7 @@
             <div class="card-title">Assistant Manager - Information Security</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'systemAdmin'">
-            <img src="images/safe_software_and_integrated_solutions_pvt_ltd_logo.jpeg" alt="System Admin" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpg" alt="System Admin" />
             <div class="card-number">6</div>
             <div class="card-title">System Administrator</div>
           </div>
@@ -235,6 +180,7 @@
 
       <!-- Skills Section -->
       <div id="skills" class="space-y-4">
+        <h2 class="section-header">Skills</h2>
         <div class="carousel">
           <div class="skill-card" @click="isOpen = true; selectedItem = 'siem'">
             <img src="images/placeholder1.jpg" alt="SIEM" />
@@ -291,6 +237,7 @@
 
       <!-- Projects Section -->
       <div id="projects" class="space-y-4">
+        <h2 class="section-header">Projects</h2>
         <div class="carousel">
           <div class="card" @click="isOpen = true; selectedItem = 'threatIntel'">
             <img src="images/placeholder1.jpg" alt="Threat Intel Engine" />
@@ -312,19 +259,20 @@
 
       <!-- Education Section -->
       <div id="education" class="space-y-4">
+        <h2 class="section-header">Education</h2>
         <div class="carousel">
           <div class="card" @click="isOpen = true; selectedItem = 'mba'">
-            <img src="images/download.jpeg" alt="MBA" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpeg" alt="MBA" />
             <div class="card-number">1</div>
             <div class="card-title">Master of Business Administration (MBA)</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'gdba'">
-            <img src="images/download.jpeg" alt="GDBA" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpeg" alt="GDBA" />
             <div class="card-number">2</div>
             <div class="card-title">Graduate Diploma in Business Administration (GDBA)</div>
           </div>
           <div class="card" @click="isOpen = true; selectedItem = 'diploma'">
-            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpg" alt="Diploma" />
+            <img src="images/1_tnWlDu8HlAiKzq31zJbLiw.jpeg" alt="Diploma" />
             <div class="card-number">3</div>
             <div class="card-title">Diploma in Computer Hardware</div>
           </div>
@@ -333,6 +281,7 @@
 
       <!-- Contact Section -->
       <div id="contact" class="space-y-4">
+        <h2 class="section-header">Contact</h2>
         <div class="card">
           <p>Email: <a href="mailto:jaykrishnancp@gmail.com" class="text-red-500">jaykrishnancp@gmail.com</a></p>
           <p>LinkedIn: <a href="https://linkedin.com/in/jaykrishnancp" class="text-red-500">linkedin.com/in/jaykrishnancp</a></p>
