--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jayakrishnan CP | Cybersecurity Leader Resume</title>
+  <title>Jayakrishnan C P | Cybersecurity Leader Resume</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/alpinejs" defer></script>
   <style>
@@ -51,7 +51,7 @@
     /* Hero section styling */
     .hero {
       /* Background image for San Francisco */
-      background-image: url('https://placehold.co/1200x600/000000/FFFFFF/png?text=San+Francisco+Skyline'); /* Placeholder for San Francisco image */
+      background-image: url('images/bay-bridge-san-francisco-california-wallpaper-preview.jpg'); /* Placeholder for San Francisco image */
       background-size: cover; /* Cover the entire area */
       background-position: center; /* Center the image */
       background-repeat: no-repeat; /* Do not repeat the image */
